--- a/app/assets/stylesheets/blazer/application.css
+++ b/app/assets/stylesheets/blazer/application.css
@@ -68,3 +68,15 @@ input.search:focus {
 .ace_gutter-cell.error {
   background-color: red;
 }
+
+.chart {
+  height: 300px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.chart .alert {
+  display: inline-block;
+}
