--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -19,7 +19,7 @@
           <% end %>
         </div>
         <%= f.select :data_source, Blazer.data_sources.values.map { |ds| [ds.name, ds.id] }, {}, class: ("hide" if Blazer.data_sources.size == 1), style: "width: 100px;" %>
-        <%= select_tag :table_names, options_for_select([["Preview table", nil]] + Blazer.data_sources[@query.data_source].tables.keys), style: "margin-right: 20px; width: 240px;" %>
+        <div id="tables" style="display: inline-block; width: 260px; margin-right: 10px;"></div>
         <%= link_to "Run", "#", class: "btn btn-info", id: "run", style: "vertical-align: top;" %>
       </div>
     </div>
@@ -121,15 +121,21 @@
     $("#run").click();
   }
 
-  $("#table_names").selectize({
-  }).change( function () {
+  $(document).on("change", "#table_names", function () {
     var val = $(this).val();
     if (val.length > 0) {
       editor.setValue("SELECT * FROM " + val + " LIMIT 10");
       $("#run").click();
     }
   });
-  $("#query_data_source").selectize();
+
+  function updatePreviewSelect() {
+    $("#tables").load("<%= tables_queries_path %>?" + $.param({data_source: $("#query_data_source").val()}), function () {
+      $("#table_names").selectize({});
+    });
+  }
+  updatePreviewSelect();
+  $("#query_data_source").selectize().change(updatePreviewSelect);
 
   $("form.the_form").on("submit", function() {
     $("#query_statement").val(editor.getValue());
