Removed blazer prefix from columns

--- a/app/views/blazer/check_mailer/state_change.html.erb
+++ b/app/views/blazer/check_mailer/state_change.html.erb
@@ -1,4 +1,4 @@
-<p><%= link_to "View", query_url(@check.blazer_query_id) %></p>
+<p><%= link_to "View", query_url(@check.query_id) %></p>
 <% if @error %>
   <p><%= @error %></p>
 <% elsif @rows_count > 0 %>
