--- a/app/views/blazer/check_mailer/failing_checks.html.erb
+++ b/app/views/blazer/check_mailer/failing_checks.html.erb
@@ -1,6 +1,6 @@
 <ul>
   <% @checks.each do |check| %>
-    <li><%= link_to check.blazer_query.name, query_url(check.blazer_query_id) %></li>
+    <li><%= link_to check.query.name, query_url(check.query_id) %></li>
   <% end %>
 </ul>
 <p><%= link_to "Manage checks", checks_url %></p>
