--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -14,9 +14,12 @@
       <div class="form-group text-right">
         <div class="pull-left" style="margin-top: 6px;">
           <%= link_to "Back", :back %>
-          <span class="text-muted" style="margin-left: 20px;"> Use {start_time} and {end_time} for time ranges</span>
+          <% if Blazer.data_sources.size == 1 %>
+            <span class="text-muted" style="margin-left: 20px;"> Use {start_time} and {end_time} for time ranges</span>
+          <% end %>
         </div>
-        <%= select_tag :table_names, options_for_select([["Preview table", nil]] + Blazer.tables.keys), style: "margin-right: 20px; width: 240px;" %>
+        <%= f.select :data_source, Blazer.data_sources.values.map { |ds| [ds.name, ds.id] }, {}, class: ("hide" if Blazer.data_sources.size == 1), style: "width: 140px;" %>
+        <div id="tables" style="display: inline-block; width: 260px; margin-right: 10px;"></div>
         <%= link_to "Run", "#", class: "btn btn-info", id: "run", style: "vertical-align: top;" %>
       </div>
     </div>
@@ -99,7 +102,7 @@
     if (xhr) {
       xhr.abort();
     }
-    xhr = $.post("<%= run_queries_path %>", $.extend({}, params, {statement: editor.getValue()}), function (data) {
+    xhr = $.post("<%= run_queries_path %>", $.extend({}, params, {statement: editor.getValue(), data_source: $("#query_data_source").val()}), function (data) {
       $("#results").html(data);
 
       error_line = /LINE (\d+)/g.exec($("#results").find('.alert-danger').text());
@@ -118,14 +121,21 @@
     $("#run").click();
   }
 
-  $("#table_names").selectize({
-  }).change( function () {
+  $(document).on("change", "#table_names", function () {
     var val = $(this).val();
     if (val.length > 0) {
       editor.setValue("SELECT * FROM " + val + " LIMIT 10");
       $("#run").click();
     }
   });
+
+  function updatePreviewSelect() {
+    $("#tables").load("<%= tables_queries_path %>?" + $.param({data_source: $("#query_data_source").val()}), function () {
+      $("#table_names").selectize({});
+    });
+  }
+  updatePreviewSelect();
+  $("#query_data_source").selectize().change(updatePreviewSelect);
 
   $("form.the_form").on("submit", function() {
     $("#query_statement").val(editor.getValue());
