--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -19,12 +19,12 @@
           <% end %>
         </div>
         <%= f.select :data_source, Blazer.data_sources.values.map { |ds| [ds.name, ds.id] }, {}, class: ("hide" if Blazer.data_sources.size == 1), style: "width: 140px;" %>
-        <div id="tables" style="display: inline-block; width: 260px; margin-right: 10px;"></div>
+        <div id="tables" style="display: inline-block; width: 260px; margin-right: 10px;" class="hide">
+          <%= render partial: "tables" %>
+        </div>
         <script>
           function updatePreviewSelect() {
-            $("#tables").load("<%= tables_queries_path %>?" + $.param({data_source: $("#query_data_source").val()}), function () {
-              $("#table_names").selectize({});
-            });
+            $("#tables").load("<%= tables_queries_path %>?" + $.param({data_source: $("#query_data_source").val()}));
           }
           updatePreviewSelect();
           $("#query_data_source").selectize().change(updatePreviewSelect);
