--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -153,9 +153,17 @@
   </div>
 
   <script>
-    $.post("<%= run_queries_path %>", <%= json_escape({statement: @statement, query_id: @query.id}.to_json).html_safe %>, function (data) {
+    var request = $.ajax({
+      url: "<%= run_queries_path %>",
+      method: "POST",
+      data: <%= json_escape({statement: @statement, query_id: @query.id}.to_json).html_safe %>,
+      dataType: "html"
+    }).done(function(data) {
       $("#results").html(data);
       $("#results table").stupidtable().stickyTableHeaders({fixedOffset: 60});
+    }).fail(function(jqXHR, textStatus, errorThrown) {
+      var message = (typeof errorThrown === "string") ? errorThrown : errorThrown.message;
+      $("#results").css("color", "red").html(message);
     });
   </script>
 <% end %>
