--- a/app/views/blazer/queries/_index.html.erb
+++ b/app/views/blazer/queries/_index.html.erb
@@ -3,7 +3,7 @@
     <td class="query">
       <%= link_to query.name, query %>
       <span style="color: #ccc;"><%= extract_vars(query.statement).join(", ") %></span>
-      <% if query.created_at > 2.days.ago %>
+      <% if @queries.size < 1000 && query.created_at > 2.days.ago %>
         <small style="font-weight: bold; color: #5cb85c;">NEW</small>
       <% end %>
       <% if @trending_queries[query.id] %>
