--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -9,7 +9,12 @@
 <% else %>
   <% unless @only_chart %>
     <% if @cached_at %>
-      <p class="text-muted" style="float: right;">Cached <%= time_ago_in_words(@cached_at) %> ago</p>
+      <p class="text-muted" style="float: right;">
+        Cached <%= time_ago_in_words(@cached_at) %> ago
+        <% if @query && !params[:data_source] %>
+          <%= link_to "Refresh", refresh_query_path(@query, variable_params), method: :post %>
+        <% end %>
+      </p>
     <% end %>
     <p class="text-muted"><%= pluralize(@rows.size, "row") %></p>
   <% end %>
