--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -10,7 +10,7 @@
   <% unless @only_chart %>
     <% if @cached_at %>
       <p class="text-muted" style="float: right;">
-        Cached <%= time_ago_in_words(@cached_at) %> ago
+        Cached <%= time_ago_in_words(@cached_at, include_seconds: true) %> ago
         <% if @query && !params[:data_source] %>
           <%= link_to "Refresh", refresh_query_path(@query, variable_params), method: :post %>
         <% end %>
