Restored run button - closes #23

--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -142,6 +142,8 @@
         }
       </script>
     <% end %>
+
+    <input type="submit" class="btn btn-success" value="Run" style="vertical-align: top;" />
   </form>
 <% end %>
 
