--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -18,7 +18,7 @@
   <div class="container">
     <div class="row" style="padding-top: 13px;">
       <div class="col-sm-9">
-        <%= link_to "Home", root_path, class: "btn btn-primary", style: "vertical-align: top; margin-right: 5px;" %>
+        <%= render partial: "blazer/nav" %>
         <h3 style="margin: 0; line-height: 34px; display: inline-block;">
           <%= @query.name %>
         </h3>
