--- a/app/views/blazer/checks/index.html.erb
+++ b/app/views/blazer/checks/index.html.erb
@@ -1,9 +1,7 @@
 <% title "Checks" %>
 
 <p style="float: right;"><%= link_to "New Check", new_check_path, class: "btn btn-info" %></p>
-<p>
-  <%= link_to "Home", root_path, class: "btn btn-primary", style: "margin-right: 10px;" %>
-</p>
+<%= render partial: "blazer/nav" %>
 
 <% colors = {failing: "red", passing: "#5cb85c", error: "#666"} %>
 <table class="table">
