--- a/app/views/blazer/dashboards/index.html.erb
+++ b/app/views/blazer/dashboards/index.html.erb
@@ -1,9 +1,7 @@
 <% title "Dashboards" %>
 
 <p style="float: right;"><%= link_to "New Dashboard", new_dashboard_path, class: "btn btn-info" %></p>
-<p>
-  <%= link_to "Home", root_path, class: "btn btn-primary", style: "margin-right: 10px;" %>
-</p>
+<%= render partial: "blazer/nav" %>
 
 <table class="table">
   <thead>
