--- a/app/views/blazer/queries/home.html.erb
+++ b/app/views/blazer/queries/home.html.erb
@@ -1,9 +1,18 @@
 <div id="queries">
   <div id="header" style="margin-bottom: 20px;">
-    <div class="pull-right">
+    <div class="btn-group pull-right">
       <%= link_to "New Query", new_query_path, class: "btn btn-info" %>
-      <%= link_to "Dashboards", dashboards_path, class: "btn btn-primary" %>
-      <%= link_to "Checks", checks_path, class: "btn btn-primary" %>
+      <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <span class="caret"></span>
+        <span class="sr-only">Toggle Dropdown</span>
+      </button>
+      <ul class="dropdown-menu">
+        <li><%= link_to "Dashboards", dashboards_path %></li>
+        <li><%= link_to "Checks", checks_path %></li>
+        <li role="separator" class="divider"></li>
+        <li><%= link_to "New Dashboard", new_dashboard_path %></li>
+        <li><%= link_to "New Check", new_check_path %></li>
+      </ul>
     </div>
     <input type="text" placeholder="Start typing a query or person" style="width: 300px; display: inline-block;" autofocus=true class="search form-control" />
   </div>
