--- a/app/views/layouts/blazer/application.html.erb
+++ b/app/views/layouts/blazer/application.html.erb
@@ -7,6 +7,10 @@
 
     <%= stylesheet_link_tag "blazer/application" %>
     <%= javascript_include_tag "//www.google.com/jsapi", "blazer/application" %>
+    <% if blazer_maps? %>
+      <%= stylesheet_link_tag "https://api.mapbox.com/mapbox.js/v2.2.2/mapbox.css" %>
+      <%= javascript_include_tag "https://api.mapbox.com/mapbox.js/v2.2.2/mapbox.js" %>
+    <% end %>
     <%= csrf_meta_tags %>
   </head>
   <body>
