Prefix helpers with blazer_

--- a/app/views/blazer/checks/index.html.erb
+++ b/app/views/blazer/checks/index.html.erb
@@ -1,4 +1,4 @@
-<% title "Checks" %>
+<% blazer_title "Checks" %>
 
 <p style="float: right;"><%= link_to "New Check", new_check_path, class: "btn btn-info" %></p>
 <%= render partial: "blazer/nav" %>
