--- a/app/views/blazer/dashboards/index.html.erb
+++ b/app/views/blazer/dashboards/index.html.erb
@@ -1,4 +1,4 @@
-<% title "Dashboards" %>
+<% blazer_title "Dashboards" %>
 
 <p style="float: right;"><%= link_to "New Dashboard", new_dashboard_path, class: "btn btn-info" %></p>
 <%= render partial: "blazer/nav" %>
