--- a/app/views/blazer/queries/home.html.erb
+++ b/app/views/blazer/queries/home.html.erb
@@ -20,7 +20,7 @@
   <table class="table">
     <thead>
       <tr>
-        <th>Query</th>
+        <th>Name</th>
         <th style="width: 20%; text-align: right;">Mastermind</th>
       </tr>
     </thead>
