--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -45,7 +45,7 @@
         <% if @query.persisted? %>
           <%= link_to "Delete", query_path(@query), method: :delete, "data-confirm" => "Are you sure?", class: "btn btn-danger" %>
         <% end %>
-        <%= f.submit "Save", class: "btn btn-success" %>
+        <%= f.submit @query.persisted? ? "Update" : "Create", class: "btn btn-success" %>
       </div>
     </div>
   </div>
