--- a/app/views/blazer/queries/_index.html.erb
+++ b/app/views/blazer/queries/_index.html.erb
@@ -1,4 +1,4 @@
-<% (@dashboards + @queries).each do |query| %>
+<% (@my_queries + @dashboards + @queries).each do |query| %>
   <% is_query = query.is_a?(Blazer::Query) %>
   <tr>
     <td class="query <%= "dashboard" unless is_query %>">
