Restore marker size

--- a/app/views/blazer/queries/run.html.erb
+++ b/app/views/blazer/queries/run.html.erb
@@ -48,7 +48,7 @@
             properties: {
               description: marker.title,
               'marker-color': '#f86767',
-              'marker-size': 'small'
+              'marker-size': 'medium'
             }
           });
         }
