--- a/app/views/blazer/checks/_form.html.erb
+++ b/app/views/blazer/checks/_form.html.erb
@@ -1,4 +1,4 @@
-<p class="text-muted">Checks are designed to identify bad data. A check fails if there are any results.</p>
+<p class="text-muted">Checks are designed to identify bad data. A check fails if there are any results (unless inverted).</p>
 
 <% if @check.errors.any? %>
   <div class="alert alert-danger"><%= @check.errors.full_messages.first %></div>
@@ -14,6 +14,18 @@
       $("#check_query_id").selectize().parents(".hide").removeClass("hide");
     </script>
   </div>
+
+  <div class="form-group">
+    <%= f.label "Failure criterion?" %>
+    <%= f.select :invert, [['Fail if ANY results returned (default)', false], ['Fail if NO results returned (invert)', true]], {}, {id: 'select-invert'} %>
+    <script>
+      $("#select-invert").selectize({
+        create: true,
+        sortField: 'text'
+      });
+    </script>
+  </div>
+
   <div class="form-group">
     <%= f.label :emails %>
     <%= f.text_field :emails, placeholder: "Optional, comma separated", class: "form-control" %>
